--- a/中赋能云商入职考核.md
+++ b/中赋能云商入职考核.md
@@ -9,7 +9,7 @@
 
 公司核心：交易规则的制订，确保安全、高效。
 
-类似于淘宝和商家店铺，制订如何买、如何看的规则，商家店铺决定卖什么、一次能买多少件等规则，进行招标、非招标等交易。中赋能提供平台和本质规则。
+类似于淘宝和商家店铺，淘宝平台制订如何买、如何浏览商品的规则，商家店铺决定卖什么、一次能买多少件等规则。而我们平台则是对招标、非招标等交易制订规则，分子公司则可以根据该规则进行不同工程或商品招标和非招标交易。
 
 ##### 三个赋能：
 
@@ -17,6 +17,15 @@
 2. 技术赋能
 3. 商业赋能
 
-##### 证券交易所和证券公司之间的关系
+##### 证券交易所和证券公司之间的关系：
 
-菜市场和小摊贩的关系
+菜市场和小摊贩的关系、淘宝平台和淘宝商家的关系。
+
+|          |          |                 |
+| :------: | :------: | :-------------: |
+| 云商平台 | 分子公司 |  供应商/采购方  |
+|  交易所  |   券商   | 上市公司/投资者 |
+
+##### 我司和竞品之间的关系
+
+我们平台完成以后，竞品以后都是我们的分子公司。
