--- a/中赋能云商入职考核.md
+++ b/中赋能云商入职考核.md
@@ -1,6 +1,6 @@
 ##### 中赋能云商平台：
 
-类比交易所的会员制的 B2B 竞价交易新体系，
+类比交易所会员制的 B2B 竞价交易系统，
 
 1. 制订交易规则，制定数据标准。
 2. 提供智能交易平台，智能交易模型，智能编制招投标文件工具。
@@ -9,7 +9,15 @@
 
 公司核心：交易规则的制订，确保安全、高效。
 
-类似于淘宝和商家店铺，淘宝平台制订如何买、如何浏览商品的规则，商家店铺决定卖什么、一次能买多少件等规则。而我们平台则是对招标、非招标等交易制订规则，分子公司则可以根据该规则进行不同工程或商品招标和非招标交易。
+类似于淘宝和商家店铺，淘宝平台制订如何买、如何浏览商品的规则，商家店铺决定卖什么等规则。而我们平台则是对招标、非招标等交易制订规则，分子公司则可以根据该规则进行不同工程或商品招标和非招标交易。
+
+##### 为什么要成立中赋能云商平台
+
+1.  当前的招投标平台只是把传统的招投标一封不动地搬到了线上，招投标依旧存在着流程较长、较为复杂的问题。
+2.  当前有许多的招投标平台以及其他信息来源，导致了信息不对称的问题。
+3.  招投标法的成立已经有二三十年了，因此有许多人已经摸清了这个法规，清楚如何找 bug、钻空子，招投标已经是一个形式，已经违背了当初公开公平公正的初衷。
+4.  给当前的招投标平台一个数字化转型的机会。
+    综合以上四点，成立中赋能云商平台。
 
 ##### 三个赋能：
 
@@ -28,4 +36,4 @@
 
 ##### 我司和竞品之间的关系
 
-我们平台完成以后，竞品以后都是我们的分子公司。
+我们平台完成以后，竞品都是我们的分子公司。
