--- a/7-中赋能云商入职考核.md
+++ b/7-中赋能云商入职考核.md
@@ -1,4 +1,4 @@
-##### 中赋能云商平台：
+##### 中赋能云商平台做什么的：
 
 类比交易所会员制的 B2B 竞价交易系统，
 
@@ -37,3 +37,31 @@
 ##### 我司和竞品之间的关系
 
 我们平台完成以后，竞品都是我们的分子公司。
+
+##### 券商的主营业务是什么？证券交易所是如何类比到云商平台的？
+
+1. 经纪业务、交易业务、投行业务及资管业务是券商的主要经营业务。
+2. 交易所会员制的 B2B 竞价交易系统。
+
+##### 国信集团及其分子公司是如何在新的业务模式下找到转型方向和增长点
+
+##### 目前招投标行业的几种交易方式
+
+1、公开招标；2、邀请招标  
+(招投开评定)
+
+##### 竞价交易的业务流程
+
+市场供应商满足三家以上，以价格竞争为主，可进行多轮报价的采购项目。类似于拍卖流程。
+
+##### 为什么要以竞价交易的方式开始进行初期的开发工作？
+
+首先是因为我们需要交付一个作品给股东，而竞价方式是在招标和非招标中我们能够最快速实现和大众最容易接受的的一个交易方式
+
+##### 工作过程中将来会面临的最难的点是什么，该如何解决
+
+我认为最难的点就是从 0 到 1 的这个过程，从 0 开始搭建项目是一个比较有挑战性的一个点，多学习，多交流。
+
+##### 个人的工作如何与其他部门进行协调
+
+多交流多沟通
